partiali completed (what we offer) section

--- a/index.html
+++ b/index.html
@@ -58,12 +58,30 @@
           <p class='text-center mt-5'>Introducing Avant the new product lineup that reinvents vintage and modern by fusing past and future.</p>
     </section>
 
-    <section id='claim' class="mt-5 mb-5">
-        <h1 class='text-center'>Who we are</h1>
-        <p class='text-center w-2'>Workbench Studio is a furniture company and a design studio since 1945. <br/>
+    <section id='claim' class="mt-5 mb-5 text-center">
+        <h1>Who we are</h1>
+        <p class='mb-5'>Workbench Studio is a furniture company and a design studio since 1945. <br/>
             We sell high class furniture and design our own limited collections
-             with spetialized designers and craftsmen with more than 25 years of experience.</p>
-        <button type="button" class='btn btn-primary'>LEARN MORE</button>
+             with spetialized designers and craftsmen<br/> with more than 25 years of experience.</p>
+        <button type="button" class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</button>
+    </section>
+
+    <section id='expo-offers' class='mt-5 text-center position-relative' style="width: 100%">
+        <div class='d-flex position-absolute' style='width: 40%; z-index: -1;'>
+            <img class='w-100' style='border-bottom-right-radius: 100px; margin-top: 70px;' src="./assets/toa-heftiba-FV3GConVSss-unsplash.jpg" alt="room">
+            <img class='w-100' style='border-top-left-radius: 100px; margin-left: 50%; margin-bottom: 70px;' src="./assets/amy-hirschi-JaoVGh5aJ3E-unsplash.jpg" alt="consulting">
+        </div>
+        <div class='text-center p-lg-5 mx-auto' style="background-color: #fff; border-radius: 0 100px 0 100px; width: 50%; transform: translateY(50%);">
+            <h1>What we offer</h1>
+            <p>Home furniture made with premium materials and solid build quality.
+                Meet our industrial designers to cutomise products or creating brand new designs to fit your needs.
+                Meet our interior designers to help you creating your perfect space.</p>
+            <button type="button" class='btn btn-primary mt-5' style='width:300px;'>OUR PRODUCTS</button>
+        </div>
+    </section>
+
+    <section>
+        
     </section>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
