added space (padding bottom) to section (what we offer)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <button type="button" class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</button>
     </section>
 
-    <section id='expo-offers' class='mt-5 text-center position-relative' style="width: 100%">
+    <section id='expo-offers' class='my-5 text-center position-relative' style="width: 100%; padding-bottom: 20rem;">
         <div class='d-flex position-absolute' style='width: 40%; z-index: -1;'>
             <img class='w-100' style='border-bottom-right-radius: 100px; margin-top: 70px;' src="./assets/toa-heftiba-FV3GConVSss-unsplash.jpg" alt="room">
             <img class='w-100' style='border-top-left-radius: 100px; margin-left: 50%; margin-bottom: 70px;' src="./assets/amy-hirschi-JaoVGh5aJ3E-unsplash.jpg" alt="consulting">
@@ -80,8 +80,25 @@
         </div>
     </section>
 
-    <section>
-        
+    <section id='our-values'>
+        <h1>Our values</h1>
+        <div class='d-flex'>
+            <div>
+                <i>icon</i>
+                <p>Taylored designs
+                    for all your needs  </p>
+            </div>
+            <div>
+                <i>icon</i>
+                <p>Excellent build quality
+                    and high class materials  </p>
+            </div>
+            <div>
+                <i>icon</i>
+                <p>10 years of warranty
+                    for all our products </p>
+            </div>
+        </div>
     </section>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
