completed home section page layout

--- a/index.html
+++ b/index.html
@@ -157,6 +157,26 @@
         </div>
     </section>
 
+    <section id='visit-showrooms' class='my-5 text-center d-flex align-items-center justify-content-center'>
+        <div>
+            <h1>Visit our<br>Showrooms</h1>
+            <button class='btn btn-primary mt-5'>BOOK NOW</button>
+        </div>
+    </section>
+
+    <section id='newsletter' class='text-center d-flex justify-content-center align-items-center'>
+        <div>
+            <h1>Newsletter</h1>
+            <p>Sign up to know when new collections arrives to our showroom, get special discounts and more.</p>
+            <input type="email" name="email"><br>
+            <button class='btn btn-primary mt-3'>SIGNUP</button>
+        </div>
+    </section>
+
+    <footer class='text-center py-3'>
+        <p>© Copyright 2021 Workbench Studio S.p.a. All rights reserved.</p>
+    </footer>
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
