--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Workbench Studio | Home</title>
 </head>
 <body>
-    <header class='mb-5'>
-        <nav class='navbar navbar-expand-lg navbar-light bg-light'>
+    <header class='pt-3 pb-5'>
+        <nav class='navbar navbar-expand-lg navbar-light'>
             <div class='container'>
                 <a class='navbar-brand' href="#">Workbench STUDIO</a>
                 <button class='navbar-toggler' type="button" data-bs-toggle='collapse' data-bs-target='#menu-sections'>
                     <span class='navbar-toggler-icon'></span>
                 </button>
-                <div class='collapse navbar-collapse' id='menu-sections'>
-                    <ul class="navbar-nav me-auto mb-2 mb-2 mb-lg-0">
+                <div class='collapse navbar-collapse justify-content-end' id='menu-sections'>
+                    <ul class="navbar-nav mb-2 mb-2 mb-lg-0 justify-content-between" id='ul-nav'>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Who we are</a>
+                            <a class="nav-link" href="./pages/about-us.html">Who we are</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Our products</a>
@@ -35,19 +35,19 @@
         </nav>
     </header>
 
-    <section id='slider' class='pt-5'>
+    <section id='slider'>
         <h1 class='text-center mb-5'>Avant Collection</h1>
         <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="/assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
@@ -58,15 +58,17 @@
           <p class='text-center mt-5'>Introducing Avant the new product lineup that reinvents vintage and modern by fusing past and future.</p>
     </section>
 
-    <section id='claim' class="mt-5 mb-5 text-center">
-        <h1>Who we are</h1>
-        <p class='mb-5'>Workbench Studio is a furniture company and a design studio since 1945. <br/>
-            We sell high class furniture and design our own limited collections
-             with spetialized designers and craftsmen<br/> with more than 25 years of experience.</p>
-        <button type="button" class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</button>
+    <section id='claim' class="d-flex align-items-center text-center">
+        <div class="m-auto">
+            <h1>Who we are</h1>
+            <p class='mb-5'>Workbench Studio is a furniture company and a design studio since 1945. <br/>
+                We sell high class furniture and design our own limited collections
+                with spetialized designers and craftsmen<br/> with more than 25 years of experience.</p>
+            <button type="button" class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</button>
+        </div>
     </section>
 
-    <section id='expo-offers' class='my-5 text-center position-relative' style="width: 100%; padding-bottom: 20rem;">
+    <section id='expo-offers' class='text-center position-relative d-none d-lg-block' style="width: 100%; padding-bottom: 20rem;">
         <div class='d-flex position-absolute' style='width: 40%; z-index: -1;'>
             <img class='w-100' style='border-bottom-right-radius: 100px; margin-top: 70px;' src="./assets/toa-heftiba-FV3GConVSss-unsplash.jpg" alt="room">
             <img class='w-100' style='border-top-left-radius: 100px; margin-left: 50%; margin-bottom: 70px;' src="./assets/amy-hirschi-JaoVGh5aJ3E-unsplash.jpg" alt="consulting">
@@ -82,7 +84,7 @@
 
     <section id='our-values' class='text-center'>
         <h1>Our values</h1>
-        <div class='d-flex justify-content-between container my-5'>
+        <div class='d-flex justify-content-between flex-md-row flex-column container my-5'>
             <div>
                 <svg class='mb-4' xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-bullseye" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -114,8 +116,8 @@
 
     <section id='our-clients' class='text-center'>
         <h1>Our clients</h1>
-        <div class="container d-flex justify-content-between mt-5 pt-5">
-            <div class="card text-center" style="width: 18rem;">
+        <div class="container d-flex justify-content-between flex-md-row flex-column mt-5 pt-5">
+            <div class="card text-center" style="width: 18rem; margin-left: auto; margin-right: auto;">
                 <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Name</h5>
@@ -128,7 +130,7 @@
                   <h6>Profession at <strong>Company</strong></h6>
                 </div>
               </div>
-              <div class="card text-center" style="width: 18rem;">
+              <div class="card text-center" style="width: 18rem; margin-left: auto; margin-right: auto;">
                 <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Name</h5>
@@ -141,7 +143,7 @@
                   <h6>Profession at <strong>Company</strong></h6>
                 </div>
               </div>
-              <div class="card text-center" style="width: 18rem;">
+              <div class="card text-center" style="width: 18rem; margin-left: auto; margin-right: auto;">
                 <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Name</h5>
@@ -157,7 +159,7 @@
         </div>
     </section>
 
-    <section id='visit-showrooms' class='my-5 text-center d-flex align-items-center justify-content-center'>
+    <section id='visit-showrooms' class='text-center d-flex align-items-center justify-content-center'>
         <div>
             <h1>Visit our<br>Showrooms</h1>
             <button class='btn btn-primary mt-5'>BOOK NOW</button>
@@ -173,7 +175,7 @@
         </div>
     </section>
 
-    <footer class='text-center py-3'>
+    <footer class='text-center py-4'>
         <p>© Copyright 2021 Workbench Studio S.p.a. All rights reserved.</p>
     </footer>
 
