--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,13 +21,13 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about-us.html">Who we are</a>
+                            <a class="nav-link" href="#">Who we are</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Our products</a>
+                            <a class="nav-link" href="../pages/our-products.html">Our products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Get in touch</a>
+                            <a class="nav-link" href="./contacts.html">Get in touch</a>
                         </li>
                     </ul>
                 </div>
