completed form component

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             }, 10);
         }
 
+        // looping through list items from bootstrap carousel 
         let i;
         for(i=0; i<items.length; i++){
             onClassChange(items[i]);
@@ -204,7 +205,7 @@
         <div>
             <h1 class='title'>Newsletter</h1>
             <p>Sign up to know when new collections arrives to our showroom, get special discounts and more.</p>
-            <input type="email" name="email"><br>
+            <input type="email" name="email" placeholder='Your email here...'><br>
             <button class='btn btn-primary mt-3'>SIGNUP</button>
         </div>
     </section>
