--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" href="../assets/fonts/mermaid.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Workbench Studio | Home</title>
 </head>
 <body>
@@ -36,17 +39,17 @@
     </header>
 
     <section class="text-center">
-        <div class='container pt-5'>
-            <h1 class='mb-5'>Who we are</h1>
+        <div class='container py-5'>
+            <h1 class='mb-5 title'>Who we are</h1>
             <p>Workbench Studio is a furniture company and a design studio since 1945. We sell high-class furniture and design our limited collections with specialized designers and craftsmen with more than 25 years of experience. Designing and building new objects is our passion and is in our DNA because we envision creativity in creating new spaces and most important find and create the vision of the living space of our client.</p>
 
-            <p>We care about the concept and the final story or dimension that the client wants in his or her house.</p>
+            <p class='mb-0'>We care about the concept and the final story or dimension that the client wants in his or her house.</p>
         </div>
     </section>
 
     <section class="text-center">
         <div class='container'>
-            <h1>Our history</h1>
+            <h1 class='title mb-5'>Our history</h1>
             <p class='lh-5'>It was the 27th of August 1945 when the visionary industrial designer Lambert Hansen starts his journey from Reykjavík Iceland to Milan, Italy.</p>
         </div>
         <div class='wrapper-image my-5'>
@@ -64,7 +67,7 @@
             The company had lost a lot from 1998 to 2000 but the bigger loss was our boss and dear friend Lambert Hansen.
             In 2002 we made a fusion with Algo&Sal GmbH and relaunched the company with a new name Workbench Studio S.p.a.</p>
             <div class='mt-5 pb-5'>
-                <h1 class='mb-5'>What we are now</h1>
+                <h1 class='mb-5 title'>What we are now</h1>
                 <p>Today we are a big corporate that offers premium build quality and unique design experiences. We like Mr. Lambert are driven by the passion and commitment to our work and our clients with clarity, transparency, and welcoming our clients in our showrooms.</p>
                 <p>After years of ups and downs, we are still here because we are driven by the exact same passion and strength that our boss had to open and lead the company for 53 years, with belief in what he was doing and love for people that were doing.</p>
             </div>
