--- a/pages/our-products.html
+++ b/pages/our-products.html
@@ -36,7 +36,7 @@
     </header>
 
     <section>
-        <div class='container d-flex flex-column flex-md-row align-items-md-center'>
+        <div class='container d-flex flex-column flex-xl-row align-items-md-center filter-container'>
             <h3 id='filterBtn' style='color: #1C768F' class='w-100'><svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
                 <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2z"/>
               </svg> Filter by:</h3>
@@ -71,90 +71,72 @@
             </div>
         </div>
 
-        <div class="container my-5">
-            <div class='row row-cols-auto'>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/sam-moqadam-kvmdsTrGOBM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/kari-shea-AMyjxxLEHU4-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/inside-weather-2EUdAWQ3Uko-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='col'>
-                    <div class="card product-card" style='width: 18rem;'>
-                        <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
-                        <div class="card-body">
-                            <h5 class='card-title'>Name product</h5>
-                            <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
-                            <a href="#" class='btn btn-primary'>BOOK A CALL</a>
-                        </div>
-                    </div>
+        <div class="container mt-5 pb-5 product-container">
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
                 </div>
             </div>
-        </div>    
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/sam-moqadam-kvmdsTrGOBM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/kari-shea-AMyjxxLEHU4-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/inside-weather-2EUdAWQ3Uko-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+            <div class="card product-card" style='width: 18rem;'>
+                <img class="card-img-top" src="../assets/products/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="product">
+                <div class="card-body">
+                    <h5 class='card-title'>Name product</h5>
+                    <p class='card-text'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis tempore corrupti maiores et. </p>
+                    <a href="#" class='btn btn-primary'>BOOK A CALL</a>
+                </div>
+            </div>
+        </div>   
     </section>
 
     <footer class='text-center py-4'>
@@ -166,10 +148,10 @@
         
         if(window.innerWidth<=768){
             filterBtn.addEventListener('click', ()=>{
-                if(dropDownFilter.style.height === "0px"){
-                    dropDownFilter.style.height = '100%';
-                }else{
+                if(dropDownFilter.style.height === "100%"){
                     dropDownFilter.style.height = '0px';
+                }else{
+                    dropDownFilter.style.height = '100%';
                 }
             });
         }
