--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
     <section id='claim' class="d-flex align-items-center text-center">
         <div class="m-auto">
             <h1 class='title'>Who we are</h1>
-            <p class='mb-5'>Workbench Studio is a furniture company and a design studio since 1945. <br/>
-                We sell high class furniture and design our own limited collections
-                with spetialized designers and craftsmen<br/> with more than 25 years of experience.</p>
-            <button type="button" class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</button>
+            <p class='mb-5'>Workbench Studio is a furniture company and a design studio since 1945. 
+                <br/>We sell high-class furniture and design our limited collections<br/> with specialized designers and craftsmen<br/> with more than 25 years of experience.</p>
+            <a href='./pages/about-us.html' class='btn btn-primary mt-5' style='width:300px;'>LEARN MORE</a>
         </div>
     </section>
 
@@ -110,10 +109,8 @@
         </div>
         <div class='text-center p-lg-5 mx-auto' style="background-color: #fff; border-radius: 0 100px 0 100px; width: 50%; transform: translateY(30%);">
             <h1 class='title'>What we offer</h1>
-            <p>Home furniture made with premium materials and solid build quality.
-                Meet our industrial designers to cutomise products or creating brand new designs to fit your needs.
-                Meet our interior designers to help you creating your perfect space.</p>
-            <button type="button" class='btn btn-primary mt-5' style='width:300px;'>OUR PRODUCTS</button>
+            <p>The home furniture is made with premium materials and solid build quality. Meet our industrial designers to customize products or creating brand new designs to fit your needs. Meet our interior designers to help you create your perfect space.</p>
+            <a href='./pages/our-products.html' class='btn btn-primary mt-5' style='width:300px;'>OUR PRODUCTS</a>
         </div>
     </section>
 
@@ -136,7 +133,7 @@
                     <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
                   </svg>
                 <p>Excellent build quality<br/>
-                    and high class materials  </p>
+                    and high-class materials  </p>
             </div>
             <div>
                 <svg class='mb-4' xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-shield-plus" viewBox="0 0 16 16">
@@ -204,7 +201,7 @@
     <section id='newsletter' class='text-center d-flex justify-content-center align-items-center'>
         <div>
             <h1 class='title'>Newsletter</h1>
-            <p>Sign up to know when new collections arrives to our showroom, get special discounts and more.</p>
+            <p>Sign up to know when new collections arrive at our showrooms, get special discounts, and more.</p>
             <input type="email" name="email" placeholder='Your email here...'><br>
             <button class='btn btn-primary mt-3 mt-5'>SIGNUP</button>
         </div>
