Uploaded site images and converted for the web. Bundled with parcel. Finalized few details & correct bugs in js filtering products(reset btn)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="assets/fonts/mermaid.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script src="./index.js"></script>
     <title>Workbench Studio | Home</title>
 </head>
 <body>
     <header class='pt-3 pb-5'>
         <nav class='navbar navbar-expand-lg navbar-light'>
             <div class='container'>
-                <a class='navbar-brand' href="#">Workbench STUDIO</a>
+                <a class='navbar-brand' href="./index.html">Workbench STUDIO</a>
                 <button class='navbar-toggler' type="button" data-bs-toggle='collapse' data-bs-target='#menu-sections'>
                     <span class='navbar-toggler-icon'></span>
                 </button>
@@ -39,26 +40,33 @@
     </header>
 
     <section id='slider'>
-        <h1 class='text-center mb-5 title-slide'></h1>
+        <h1 class='text-center pb-5 title-slide'></h1>
         <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/slides/jean-philippe-delberghe-Dw67tbZKix0-unsplash.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Design Week</h5>
+                    <p>Take the opportunity to meet new people and see what is coming next in the industrial design sector.<br/>Open days are 13 - 14 - 15 august 2021.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/toa-heftiba-FV3GConVSss-unsplash.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/slides/nathan-oakley-2zlZGqqmVGE-unsplash.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none">
-                    <h5>Second slide label</h5>
-                    <p>Some representative form placeholder second slide content for the first slide.</p>
+                    <h5>Casablanc Collection</h5>
+                    <p>A taste from middle-east with a soft touch, this new coming collection will convey warmth and lightness in our living space.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/assets/slides/nathan-oakley-gj1dnc7yRG0-unsplash.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none">
+                    <h5>Sustainability</h5>
+                    <p>We are working more and more on sustainable materials that make low or no impact.<br/> Our next goal is to reach carbon neutrality in 2030.</p>
                 </div>
               </div>
             </div>
           </div>
-          <p class='text-center mt-5 description-slide'></p>
+          <p class='text-center mt-5 pb-5 mb-0 description-slide'></p>
     </section>
 
     <script>
@@ -150,7 +158,7 @@
         <h1 class='title'>Our clients</h1>
         <div class="container d-flex justify-content-between flex-md-row flex-column mt-5 pt-5">
             <div class="card text-center card-client" style="width: 18rem; margin-left: auto; margin-right: auto;">
-                <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
+                <div class='image-client'><div class='inner-housing'><img src="assets/clients/michael-dam-mEZ3PoFGs_k-unsplash (1).jpg" class="w-100" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Alessia Sandrini</h5>
                   <h6 class="card-subtitle mb-2 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -163,7 +171,7 @@
                 </div>
               </div>
               <div class="card text-center card-client" style="width: 18rem; margin-left: auto; margin-right: auto;">
-                <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
+                <div class='image-client'><div class='inner-housing'><img src="assets/clients/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" class="w-100" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Mark Erikson</h5>
                   <h6 class="card-subtitle mb-2 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -176,7 +184,7 @@
                 </div>
               </div>
               <div class="card text-center card-client" style="width: 18rem; margin-left: auto; margin-right: auto;">
-                <div class='image-client'><div class='inner-housing'><img src="assets/dylan-gillis-KdeqA3aTnBY-unsplash.jpg" alt=""></div></div>
+                <div class='image-client'><div class='inner-housing'><img src="assets/clients/prince-akachi-i2hoD-C2RUA-unsplash.jpg" class="w-100" alt=""></div></div>
                 <div class="card-body">
                   <h5 class="card-title">Abigail Miller</h5>
                   <h6 class="card-subtitle mb-2 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
