--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -14,7 +14,7 @@
     <header class='pt-3 pb-5'>
         <nav class='navbar navbar-expand-lg navbar-light'>
             <div class='container'>
-                <a class='navbar-brand' href="#">Workbench STUDIO</a>
+                <a class='navbar-brand' href="../index.html">Workbench STUDIO</a>
                 <button class='navbar-toggler' type="button" data-bs-toggle='collapse' data-bs-target='#menu-sections'>
                     <span class='navbar-toggler-icon'></span>
                 </button>
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="./our-products.html">Our products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Get in touch</a>
+                            <a class="nav-link active" href="#">Get in touch</a>
                         </li>
                     </ul>
                 </div>
